finally moved to composer.

--- a/src/views/Home.twig
+++ b/src/views/Home.twig
@@ -23,7 +23,7 @@
 				   display: grid;
 			       place-items: center;">
 			<marquee>
-				<?= $msg ?>
+				{{ msg }}
 			</marquee>
 		</div>
 	</main>
